<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/pink"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:onClick="login"
        android:text="@string/login"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:backgroundTint="@color/pink"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.377"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:onClick="signup"
        android:text="@string/signup"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:backgroundTint="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.055"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/loginGuestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:onClick="loginGuest"
        android:text="@string/loginGuest"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:backgroundTint="@color/pink"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.062"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>