<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/production_description" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:layout_marginStart="10dp"
            android:isIndicator="true"
            android:numStars="5" />

        <TextView
            android:id="@+id/itemInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:textSize="14sp"
            android:padding="10dp"
            android:text="@string/production_info" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemPrice"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/pink"
            android:textColor="@color/black"
            android:text="@string/shopping_cart" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_to_cart"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/pink"
            android:textColor="@color/black"
            android:text="@string/delete" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>